istio-config/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nodejs-istio-circuit-breaker-redhat-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodejs-istio-circuit-breaker-redhat-greeting
spec:
  hosts:
  - "*"
  gateways:
  - nodejs-istio-circuit-breaker-redhat-gateway
  http:
  - match:
    - uri:
        prefix: /nodejs-istio-circuit-breaker-redhat/
    - uri:
        prefix: /nodejs-istio-circuit-breaker-redhat
    rewrite:
      uri: /
    route:
    - destination:
        host: nodejs-istio-circuit-breaker-redhat-greeting
        port:
          number: 8080
